--- a/server/config/config.env
+++ b/server/config/config.env
@@ -1,2 +1,2 @@
-DB_URL = "mongodb://localhost:27017/Integrated_project_management_system"
+DB_URL = "mongodb://0.0.0.0:27017/Integrated_project_management_system"
 PORT = 9000
