--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.2",
+    "install": "^0.13.0",
+    "npm": "^8.19.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-router-dom": "^6.4.2",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
