--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/icons": "^2.1.0",
+    "@coreui/icons-react": "^2.1.0",
+    "@coreui/react": "^4.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.2",
     "install": "^0.13.0",
@@ -13,10 +17,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.7.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "rsuite": "^5.23.1",
+    "sass": "^1.56.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
