--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.1.16",
     "rsuite": "^5.23.1",
     "sass": "^1.56.1",
     "styled-components": "^5.3.6",
