--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.2.2",
     "install": "^0.13.0",
+    "nodemon": "^2.0.20",
     "npm": "^8.19.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
