--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "express": "^4.18.2",
     "joi": "^17.6.3",
     "mongoose": "^6.6.5",
-    "nodemon": "^2.0.20"
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
+    "octokit": "^2.0.10"
   }
 }
