--- a/server/package.json
+++ b/server/package.json
@@ -23,9 +23,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.6.3",
-    "mongoose": "^6.6.5",
-    "nodemailer": "^6.8.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
-    "octokit": "^2.0.10"
+    "mongoose": "^6.6.5",
+    "octokit": "^2.0.10",
+    "nodemailer": "^6.8.0",
+    "request-promise": "^4.2.6"
   }
 }
