--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@trendmicro/react-sidenav": "^0.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.2.2",
     "bootstrap": "^5.2.2",
     "install": "^0.13.0",
     "nodemon": "^2.0.20",
