--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.2",
     "install": "^0.13.0",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.20",
     "npm": "^8.19.2",
     "react": "^18.2.0",
