--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "octokit": "^0.10.4",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6"
   }
 }
