--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@coreui/icons": "^2.1.0",
     "@coreui/icons-react": "^2.1.0",
     "@coreui/react": "^4.4.0",
+    "@lourenci/react-kanban": "^2.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "npm": "^8.19.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-bootstrap": "^0.26.2",
