--- a/developerui/package.json
+++ b/developerui/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@trendmicro/react-sidenav": "^0.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "nodemon": "^2.0.20",
     "reacharts": "^0.4.5",
@@ -26,6 +27,7 @@
     "recharts": "^2.2.0",
     "rsuite": "^5.24.0",
     "sass": "^1.57.1",
+    "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "suite": "^0.2.0",
     "web-vitals": "^2.1.4"
