--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^2.0.20",
     "octokit": "^0.10.4",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "socket.io": "^4.5.4"
   }
 }
